@@ -1,3 +1,8 @@
+(14/09/19)
+==========
+
+· Update Remove packages & others script.
+
 (24/01/19)
 ==========
 
